--- a/resource/exercices/todoList/css/styles.css
+++ b/resource/exercices/todoList/css/styles.css
@@ -13,6 +13,7 @@ body, html {
     padding: 50px 0px;
     height: 100%;
 
+    background-color: black;
     background-image: url("../images/background.jpg");
     background-position: center;
     background-repeat: no-repeat;
